# coral

./: .gitignore  Dockerfile  Dockerfile.app  Dockerfile.jenkins  Jenkinsfile  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
app/: main.py  utils.py
app/api/routes/: container.py  health.py  simulation.py
app/k8s/: deployment.yaml
app/services/: container_metrics.py  traffic_simulator.py
k8s/: deployment.yaml  service.yaml
scripts/: call_endpoint.py  local_ci.sh  local_push.sh  prod_push.sh
scripts/go/: call_endpoint.go  go.mod
tests/: test_main.py  test_utils.py
