[project]
name = "autoscale-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "docker>=7.1.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "autoscale-api @ file://${PROJECT_ROOT}"
]
