[project]
name = "coral"
version = "0.1.0"
description = "Kubernetes autoscaling demo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "docker>=7.1.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

